Migratint a project to spring boot 3 with JAVA 17